Tried fixing the responsiveness problem. still not good enough

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    
    <section class="about">
         <div class="main">
-            <img src="/img/img011.jpg" alt="an image of Jonathan">
+            <img src="img/mobilebg.jpg" alt="an image of Jonathan">
             <div class="about-text">
                 <h2>About <span> Me</span></h2>
                 <h5>Developer <span> & Designer </span></h5>
